--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <ion-toolbar  color="primary" class="toolbar1" (click)="bodyclick()">
-  <div class="logowrap">
+  <div class="logowrap" (click)="home()">
     <img src="assets/img/logo.png" alt="" class="logo" slot="start">
     <ion-label>
       <h2>University of Ilorin</h2>
