--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -50,6 +50,9 @@ z-index: 100;
     & > .logowrap {
      display: flex;
     }
+    &:hover{
+      cursor:pointer;
+    }
   
     & > .logowrap > ion-label{
            margin-top: 10px;
