--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -160,11 +160,19 @@ ion-slides {
     }
   }
 
-  ion-button{
-      background-color: var(--ion-color-secondary);
-      color: #fff;
-      border-radius:25px;
+  .ion-button{
+        background-color: var(--ion-color-secondary);
+    color: #fff;
+    border-radius: 25px;
+    padding: 10px;
+    display: block;
+    margin-bottom: 10px;
+    font-size: 15px;
 
+  }
+
+  .ion-button:hover{
+      cursor:pointer;
   }
 
   .delete{
@@ -178,6 +186,30 @@ ion-slides {
       }
   }
 
+.fileInput{
+    position: absolute;
+    background-color: red;
+    right: 129px;
+    height: 36px;
+    width: 168px;
+    border-radius: 25px;
+    top: 171px;
+    opacity: 0;
+}
+
+
+.fileInput:hover{
+    cursor: pointer;
+}
+
+.profileImg{
+    height:100px;
+    width:100px;
+}
+
+.submit{
+    opacity:0;
+}
 .download{
     width: 100%;
     height: 100%;
