--- a/src/app/store/store.page.html
+++ b/src/app/store/store.page.html
@@ -12,7 +12,7 @@
 
   </ion-item>
 </ion-list>
-
+ 
 </div>  -->
 
 <div class="download"  (click)="bodyclick()">
@@ -21,7 +21,7 @@
       <p slot="start">{{ebook.file_title}}</p>
       <p slot="end">{{ebook.file_size}}KB</p>
       <p slot="end"><ion-icon slot="end" name="download-outline"></ion-icon>{{ebook.file_count}}</p> 
-           <a slot="end" style="text-decoration: underline; cursor: pointer; color: var(--ion-color-secondary);" href="http://localhost/elibrary/server_api/uploads/{{ebook.file_title}}">Download</a>
+           <a slot="end" style="text-decoration: underline; cursor: pointer; color: var(--ion-color-secondary);" href="http://localhost/elibrary/server_api/uploads/{{ebook.file_title}}" (click)="download(ebook.file_id,ebook.file_size,ebook.file_url,ebook.file_title)">Download</a>
     </ion-item>
 
 </div>
